<resources>
    <string name="app_name">linerLayout</string>
    <string name="name">Ahmed Hassan</string>
    <string name="_3_hr">3 hr</string>
    <string name="engineer">Engineer</string>
    <string name="russian">Russian</string>
    <string name="uk">UK</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_4_5">4.5</string>

</resources>